<resources>
    <string-array name="measure_items">
        <item>kg</item>
        <item>pound(lb)</item>
    </string-array>
    <string-array name="measure_item_values">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="fav_exercise">Favourite exercise</string>
    <string name="none">None</string>
    <string name="ads">Ads</string>
	<string name="remove_ads">Remove ads</string>
	<string name="remove_ads_detailed">Remove ads for 2$ forever!</string>
    <string name="parsing_error">Error in timer value! It will be set to 60 sec.</string>
    <string name="cannot_delete_all_exe">You can not remove all of the exercises</string>
    <string name="select_sound_to_play">Select sound to play</string>
    <string name="play_sound">Play sound</string>
    <string name="please_add_an_exe">Please, add an exercise !!! </string>
    <string name="delete_exe">Delete exercise</string>
    <string name="play_sound_detailed">Play sound on timer end</string>
    <string name="select_an_exercise">Select an exercise from the list</string>
    <string name="press_back_to_exit">Please click BACK again to exit</string>
    <string name="edit_timer_value">Edit timer</string>
    <string name="input_new_timer_value">Input new timer value (sec): </string>
    <string name="weight_reps">Weight/reps</string>
    <string name="measures">Measures</string>
    <string name="total_weight">Total weight</string>
    <string name="set">Set</string>
    <string name="edit_exercise">Edit exercise</string>
    <string name="total_weight_of_training">Total weight of training: </string>
    <string name="comment">Comment: </string>
    <string name="start_training">Start training</string>
    <string name="finish_training">Finish training</string>
    <string name="delete_from_this_list">Delete from this list</string>
    <string name="measure_select">Select measure</string>
    <string name="add_comment_to_training">Add comment to training</string>
    <string name="sm">(cm)</string>
    <string name="select_measure">Please, select the measure of weight</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="faq">About</string>
    <string name="info_text_1">The main objective of this application - replace the paper training diary at something more useful and smart \ n</string>
    <string name="info_question_2">How to use this application?</string>
    <string name="info_text_2">They can be used just like ordinary paper diary and training.
        \nStart training (eg training of the legs) , turn on the app , choose standard training legs, or you have created a training program on its feet.
        \nIf you are just starting to engage with the program , the weights and reps will be on the unit. But if you exercise more than one exercise for each training program
        the application starts prompt and put a value from a previous workout. For example, squats . You train a second week with this application ,
        run it in training, and what you see ? You see that last workout you " sat down " with a weight of 100kg 15 times (for example) . But you know that for muscle growth , the need for progress loads
        so now you have to do 100kg 17 times in the first approach (for example) . And so on all the training .</string>
    <string name="info_question_3">What\'s in it for me?</string>
    <string name="info_text_3">Continued progress in the power load - most effective way to build muscle mass.
        \nMuscles quickly become accustomed to a constant load , you can see for yourself how people in gyms for years trained with the same weights and stand still in progress.
        \nPeople involved so years. Reach any result and then trampled on it for years. Over time, the habit is fixed , and people are not even aware , and not particularly committed to progress. However, if you run a training diary for you all the way. Sense and the basic idea of ​​the diary - to seek progress load , which leads to an increase in strength and muscle . Remember, if there is nothing around you does not change ( weight on the equipment ), you ( your muscles ) is also no reason to change ( grow and become stronger) .</string>
    <string name="info_question_4">Why? I remember the weight!</string>
    <string name="info_text_4">Very often lazy adherents say the following: " Haha I keep a diary ? I have a good memory and I can remember without notes . " Mon ami , without notes - you\'re a bug , both literally and figuratively, if we are talking about bodybuilding . First, without a diary , you will remember , at best, a maximum weight of one working approach ( 105 kg . Shrugged 6 - five times , and how much shrugged and rested in the following - it is not clear ) . Second came the next workout you will likely deliver those same 105 kg and pozhmesh their 6 - five times , ie without progression, because you will not have a clear idea when and how to load progress .</string>
    <string name="info_question_5">Why does it work?</string>
    <string name="info_text_5">Because when you train properly with the diary , you are in a state of constant struggle for progress . Each workout is filled with your clear meaning . Before each exercise approach you look at the number of repetitions and the weight that you overcame it last training session and try to go beyond this . You have a very clear objective - to add in one of the working approaches more reps or weight work , without loss results in other approaches and working exercises.
\nGain can be microscopic . For example, if you shook last workout 105 kg 7 -NIL times , try to shake 106 kg 7 -NIL or 105 -Th 8 -NIL or 105 -Th 7 -NIL and a half ( let them help partner doge half ) . BUT these increases should be. You should strive to make them ALWAYS ! And even if you exercise this month easily (within periodization ) , you will always remember that this is only for one purpose - to make further gain . You may find that 1 kg bench press - it is very small , but count how many you add a year at the rate of growth - the scales at 4 kg per month. It\'s a crazy figure - 48 kg ! And I assure you, if you\'ll reap technically lying 150 kg ( the right muscles ), the size of your shoulder girdle sooooo MUCH grows compared to the old 105 kg . And besides themselves give meaning to your workout . It is this nuance , by the way , features sports and physical culture , friends. Fighting for the best result - is a sport ! Everything else - this exercise .
\nProgress can load your muscles mass of different ways. You can , for example, reduce the rest between sets , increase the number of approaches themselves , change the forum of the exercise , change the speed of the movement , many of the principles used to increase the intensity . However, in this sense, I agree with Mr. Murphy, who said that the more complex and graceful plan , the greater the chance that it will fail . All these complex ways to increase the intensity only confuse the novice and will bring more chaos in his head than use his muscles. So remember , your task progressed weight training weights ! That is the problem you will solve handily thanks training diary .</string>
    <string name="info_question_6">OK, I\'m doing on my diary but power rates are falling! = (</string>
    <string name="info_text_6">Sometimes it happens . And well , you saw it in its statistics . Now you need to give your body more time to recover .
\nIn this case, there are two ways , and it is better to use both of them ( at a set weight) .
\n1 - Increase the time between workouts of the same group. Especially the large muscle groups . ( For example train each group more than once in 7 days, and every 10 days . Your muscles will have more time to recover , and they will be compensated in excess of the resources spent , thereby grow.)
\n2 - Increase the caloric intake and the amount of protein in the diet. Add 300-500 calories to your diet , and look at the statistics in 2-3 weeks , your power rates should go up!</string>
    <string name="info_question_7">Diary and loads of periodization</string>
    <string name="feedback_leave">Leave feedback</string>
    <string name="feedback_detail">Leave feedback on Play Market</string>
    <string name="auto_backup_to_disk">Auto backup</string>
    <string name="auto_backup_to_disk_detailed">Auto backup to Google Drive at the end of training</string>
    <string name="restore_from_google_drive">Restore from Google Drive</string>
    <string name="feedback">Feedback</string>
    <string name="backupAndRestore">Backup and restore</string>
    <string name="timer_default_state">Timer On at default</string>
    <string name="vk_group">VK group</string>
    <string name="drive">Google Drive</string>
    <string name="email">E-mail</string>
    <string name="email_to_dev">Send e-mail to developer</string>
    <string name="drive_backup">Backup to Google Drive</string>
    <string name="see_last_training">See previous training</string>
    <string name="weight">Weight</string>
    <string name="tall">Tall</string>
    <string name="chest">Chest</string>
    <string name="waist">Waist</string>
    <string name="hip">Hip</string>
    <string name="leg">Leg</string>
    <string name="calf">Calf</string>
    <string name="arm">Arm</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore from a backup</string>
    <string name="add_training_program_to_list">Name of new program:</string>
    <string name="Create">Create</string>
    <string name="add_new_exersise">Name of the new exercise:</string>
    <string name="timer_between_sets">Set a timer duration(sec):</string>
    <string name="add_an_exercise">Add an exercise</string>
    <string name="check_exe">Check exercises for a training program:</string>
    <string name="training">Workout</string>
    <string name="yes">Yes</string>
    <string name="default_timer_value_prop">Default timer value (sec)</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="timer">Timer</string>
    <string name="exit_workout">Exit workout?</string>
    <string name="turn_off_screen">Turn off screen during training</string>
    <string name="screen_off">Turn screen off</string>
    <string name="vibrate_on_save">Vibrate at the end of the timer rest</string>
    <string name="vibrate">Vibrate</string>
    <string name="default_timer">Default timer value</string>
    <string name="vibrate_lenght">Duration of vibration (sec)</string>
    <string name="default_vibrate_lenght">Duration of vibration default (sec)</string>
    <string name="backup_database_to_sd">Backup database to SD card</string>
    <string name="replace_from_backup">Replase database from SD card</string>
</resources>