<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/ads" >
        <Preference
            android:key="ads"
            android:summary="@string/remove_ads_detailed"
            android:title="@string/remove_ads" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/training" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="true"
            android:key="toTurnOff"
            android:summary="@string/turn_off_screen"
            android:title="@string/screen_off" >
        </CheckBoxPreference>

        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/select_measure"
            android:entries="@array/measure_items"
            android:entryValues="@array/measure_item_values"
            android:key="measureItem"
            android:title="@string/measure_select" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/timer" >
        <EditTextPreference
            android:defaultValue="60"
            android:enabled="true"
            android:key="etDefault"
            android:summary="@string/default_timer_value_prop"
            android:title="@string/default_timer" >
        </EditTextPreference>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="timerIsOn"
            android:summary="@string/timer_default_state"
            android:title="@string/timer" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="vibrateOn"
            android:summary="@string/vibrate_on_save"
            android:title="@string/vibrate" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="toNotifyWithSound"
            android:summary="@string/play_sound_detailed"
            android:title="@string/play_sound" />

        <Preference
            android:key="toPlaySound"
            android:title="@string/select_sound_to_play" />

        <EditTextPreference
            android:defaultValue="2"
            android:dialogTitle="@string/default_vibrate_lenght"
            android:key="vibtateLenght"
            android:summary="@string/default_vibrate_lenght"
            android:title="@string/vibrate_lenght" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/backupAndRestore" >
        <Preference
            android:icon="@drawable/ic_action_sd_storage"
            android:key="btnBackup"
            android:summary="@string/backup_database_to_sd"
            android:title="@string/backup" />
        <Preference
            android:icon="@drawable/ic_action_sd_storage"
            android:key="btnRestore"
            android:summary="@string/replace_from_backup"
            android:title="@string/restore" />
        <Preference
            android:icon="@drawable/google_drive_icon"
            android:key="btnBackupToDrive"
            android:summary="@string/drive_backup"
            android:title="@string/drive" />
        <Preference
            android:icon="@drawable/google_drive_icon"
            android:key="btnDriveRestore"
            android:summary="@string/restore_from_google_drive"
            android:title="@string/restore" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/google_drive_icon"
            android:key="settingAutoBackup"
            android:summary="@string/auto_backup_to_disk_detailed"
            android:title="@string/auto_backup_to_disk" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/feedback" >
        <Preference
            android:key="btnVK"
            android:title="@string/vk_group" />
        <Preference
            android:key="btnEmail"
            android:summary="@string/email_to_dev"
            android:title="@string/email" />
        <Preference
            android:key="btnGoToMarket"
            android:summary="@string/feedback_detail"
            android:title="@string/feedback_leave" />
    </PreferenceCategory>

</PreferenceScreen>