<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/itemSeePreviousTraining"
        android:icon="@drawable/ic_action_undo"
        android:showAsAction="collapseActionView"
        android:title="@string/see_last_training">
    </item>
    <item
        android:id="@+id/item_add_exercises"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="collapseActionView"
        android:title="@string/add_an_exercise">
    </item>
    <item
        android:id="@+id/itemDeleteExercise"
        android:showAsAction="collapseActionView"
        android:title="@string/delete_exe"/>
    <item
        android:id="@+id/itemExit"
        android:icon="@drawable/ic_action_accept"
        android:showAsAction="always"
        android:title="@string/finish_training">
    </item>
    <item
        android:id="@+id/itemAddCommentToTraining"
        android:showAsAction="collapseActionView"
        android:title="@string/add_comment_to_training"/>

</menu>