<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:background="@drawable/cream_pixels_bitmap"
    android:layout_height="match_parent"
    tools:context=".AddingProgramActivity" >
    
    
    <EditText
        android:id="@+id/etTimerValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonAddingProgram"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:inputType="textCapSentences"
        android:gravity="center_vertical|center"
        android:hint="@string/add_training_program_to_list"
        android:textStyle="italic" />

    <Button
        android:id="@+id/buttonAddingProgram"
        style="@style/HabraThemeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_margin="8dp"
        android:layout_marginTop="-4dp"
        android:textColor="@android:color/white"
        android:text="@string/Create" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/etTimerValue"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvWidget2"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/rounded" >
    </ListView>

    <TextView
        android:id="@+id/tvWidget2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/listView1"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/check_exe"
        android:textSize="18sp" />

</RelativeLayout>