<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/white_background"
    android:gravity="center_vertical"
    android:padding="16dp" >



    <TextView
        android:id="@+id/tvWidget2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/timer_between_sets"
        android:gravity="center_horizontal"
        android:text="@string/timer_between_sets"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="8dp"
        android:ems="5"
        android:gravity="center_vertical|center_horizontal"
        android:inputType="number"
        android:singleLine="false"
        android:textSize="18sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/etTimerValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSave"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText2"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/add_new_exersise"
        android:inputType="textCapSentences"
        android:singleLine="false"
        android:textSize="18sp"
        android:textStyle="italic" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSave"
        style="@style/HabraThemeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etTimerValue"
        android:text="@string/save"
        android:textColor="@android:color/white" />

</RelativeLayout>